--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,data
 
 ### Data ###
-*.csv
+# *.csv
 *.dat
 *.efx
 *.gbr
